--- a/app/src/main/res/menu/drawer_menu_home_page.xml
+++ b/app/src/main/res/menu/drawer_menu_home_page.xml
@@ -19,7 +19,7 @@
         android:id="@+id/groupAction"
         android:checkableBehavior="single">
             <item
-                android:id="@+id/itemSetting"
+                android:id="@+id/itemLogout"
                 android:title="Đăng xuất" />
     </group>
 </menu>
